# InByteImageDescriber

./: .gitignore  Inbyte_image_describer_ARCHITECTURE.md  Inbyte_image_describer_EXECUTION_FLOW.md  NDK_AndroidStudio_integration.md  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ___fairy_tale_instructions.jsonl  fairy_tale_instructions.jsonl
app/src/main/assets/models/: SmolVLM-500M-Instruct-Q4_K_M.gguf  mmproj-SmolVLM-500M-Instruct-Q8_0.gguf
app/src/main/cpp/: CMakeLists.txt  llm_inference.cpp
app/src/main/kotlin/com/inbyte/imagedescriber/: InByteApplication.kt  MainActivity.kt
app/src/main/kotlin/com/inbyte/imagedescriber/di/: AppModule.kt
app/src/main/kotlin/com/inbyte/imagedescriber/inference/: CategoryClassifier.kt  InstructionRepository.kt  LlamaEngine.kt  ModelSetupHelper.kt  QwenEngine.kt  TranslationHelper.kt
app/src/main/kotlin/com/inbyte/imagedescriber/model/: ChatMessage.kt
app/src/main/kotlin/com/inbyte/imagedescriber/ui/chat/: ChatScreen.kt  ChatUiState.kt  ChatViewModel.kt
app/src/main/kotlin/com/inbyte/imagedescriber/ui/components/: SamodivaAppBar.kt
app/src/main/kotlin/com/inbyte/imagedescriber/ui/description/: DescribeBottomSheet.kt  DescriptionScreen.kt  DescriptionViewModel.kt
app/src/main/kotlin/com/inbyte/imagedescriber/ui/images/: ImagesScreen.kt  ImagesViewModel.kt
app/src/main/kotlin/com/inbyte/imagedescriber/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
